--- a/package.json
+++ b/package.json
@@ -20,10 +20,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.16",
+    "axios": "^1.8.4",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "nodemailer": "^6.9.1",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.3"
+    "react-hook-form": "^7.55.0",
+    "react-router-dom": "^6.30.0",
+    "tailwindcss": "^4.1.4"
   },
   "devDependencies": {
     "concurrently": "^8.0.1",
